1.9.2
* Client: Default value of "CFG.Net.MinSegwitCons" changed to 4
* Client: Do not drop segwit peers when connected ot less then CFG.Net.MinSegwitCons
* Client: When loading a local transaciton, remove it from Rejected first
* Client: Never send "inv" messages with MSG_WITNESS_TX type
* Client/WebUI/Txs: Allow sorting Txs by SegWit compression factor
* Client: the handler to chain.TrustedTxChecker also checks match on tx's WTxID now.
* Tools/bdb: new switch "-fixlen" to set up the uncompressed size of each block inside blockchain.new
* Client: BlocksDB index file contains now also the uncompressed size of each block
* Client/WebUI/Wallet: Export settings stores entire local storage
* Client/WextUI: "balance" command lists mempool transaction related to the given address
* Client: start it with "-b" switch to check the balances while loading UTXO.db
* Client/WebUI: POST to "balance.json?rawtx" returns the raw (originating) transaction for each output
* Wallet: Fix: "-f" was substracting the fee from every output's value, not only the first one
* Client: Changed/fixed the way how own txs are inserted into mempool (e.g. it wasn't updating SpentOutputs)
* Client/WebUI/Wallet: Show unconfirmed transactions
* Client/WebUI/MakeTx: pay_cmd inside will not apply changes to the balance folder
* Client: changed the way freshly mined txs are removed from mempool so it also works for reorgs
* Client/WebUI/Network: Make some extra information about the nodes switchable on/off
* Client: Show number of records (txs) while loading UTXO.db
* Client/WebUI/Blocks: Removed minimum fee from the block table. Moved to the fee stats chart, also added maximum
* Client: show progess of loading/saving balance of P2KH/P2SH addresses
* Client: removed "config.Beeps" and all the related beeping functionality
* Client/WebUI/Blocks: transactions in the fee stats can be grouped now to smooth the graph
* Client: fee stats fpor WebUI/Blocks are being saved now